Release notes for OpenLava versions

   Toward 4.0 release
           ^
           |
           |
-- Added the blaunch.1 man page in the batch man section.
-- Developed new API ls_getrpid() to get a remote process id of a task
   started by RES knowing the local taskid.
-- Developed new API lsb_launch() to start a components of parallel jobs.
   This API also collects resource usage of the remote tasks and reports
   the to OpenLava so they can be displayed with the bjobs command.
-- Developed the blaunch command, if mpiexec/mpirun is integrated with
   blaunch, it can launch mpi parallel application, or it can launch
   home grown parallel applications. It is a wrapper around the lsb_launch()
   API.
-- In the bootstrap.sh file create the revision number file
   which is going to be installed in the etc directory.
-- Create lsid 4.0dev4 output.

4.0pre3
=======

-- Create lsid 4.0pre3 tag output.

4.0pre2
========

Introduce 4.0dev3 lsid output. The dev indicates that the code
is between tags. 4.0dev3 finishes with 4.0pre3 tag. After which
we will start 4.0dev4 lsid output till we tag 4.0pre4 or we cut
a final 4.0 branch. In this way when building tagged version we
know the exact commit.

4.0pre1
========

-- Fix res/nios hang blocking ol make.
-- Create a new parameter NIOS_MAX_TASKS specifying the maximum number
   of tasks nios can handle.
-- Fix/reimplement btop/bbot. Since the job queue management has undergone
   performance improvements these function had to be coded as well.
-- Fix the mbatchd variable MBD_NO_QSORT_JOBS, which was incorrectly
   set to MBD_QSORT_JOBS in daemons.c
-- Fix formatting bug in bparams.
-- Add badmin hclose/hopen -C "message", and fix parsing error of "badmin
   subcommand <command_options>".
-- Fix backward compatibility bug in which earlier version of OL cannot
   get information from higher version if mbatchd, specifically 3.0/3.1
   bqueues cannot get information from 3.3 bqueues.