@@ -1,6 +1,6 @@
 /*
+ * Copyright (C) 2011-2016 David Bigagli
  * Copyright (C) 2007 Platform Computing Inc
- * Copyright (C) 2011-2015 David Bigagli
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of version 2 of the GNU General Public License as
@@ -1457,6 +1457,10 @@ checkParams(struct infoReq *req, struct parameterInfo *reply)
     reply->maxSbdConnections = maxSbdConnections;
     reply->hist_mins = mbdParams->hist_mins;
     reply->run_abs_limit = mbdParams->run_abs_limit;
+    if (mbdParams->preemptableResources)
+        reply->preemptableResources = mbdParams->preemptableResources;
+    else
+        reply->preemptableResources = "";
 }
 
 void
